2005-07-19  Dan Winship  <danw@novell.com>

	* stetic/UIManager.cs: subclass of Gtk.UIManager for Stetic. Not
	horribly functional yet, though it does track Edit menu
	sensitivity, for both widgets and text, and implements
	Cut/Copy/Paste for text (but not widgets).

	* stetic/stetic.glade: Replace the menubar with another Custom.

	* stetic/Stetic.cs (Main): create a Stetic.UIManager. Set
	SteticMain.MainWindow (to the window containing the PropertyGrid).
	Move menu command implementations to UIManager.cs

	* stetic/ContextMenu.cs: use ImageMenuItems for Cut/Copy/Paste.
	Use the UIManager to implement them.

	* stetic/Project.cs (SelectedHandler, Selection): pass the
	Gtk.Widget, not its wrapper, since there won't be a wrapper in the
	Placeholder case.

	* stetic/ProjectView.cs (WidgetSelected):
	* stetic/PropertyGrid.cs (Selected): update for prototype change

2005-07-19  Dan Winship  <danw@novell.com>

	* libstetic/IProject.cs: rename IStetic to IProject

	* libstetic/*.cs:
	* libstetic/wrapper/*.cs:
	* stetic/Project.cs: update

2005-07-15  Dan Winship  <danw@novell.com>

	* libstetic/PropertyDescriptor.cs (Translatable, IsTranslated,
	SetTranslated, TranslationContext, SetTranslationContext,
	TranslationComment, SetTranslationComment): support for
	translatable properties.

	* libstetic/GladeUtils.cs: Reorg a bunch to handle
	translatable-string-related attributes on import/export.
	(SetPacking): do GladeOverride packing properties correctly.

	* libstetic/EditorAttribute.cs: gone. We weren't really using it
	anyway, and editors can get data from the PropertyDescriptor now.

	* libstetic/TextBox.cs: a vertically-scrolling
	fixed-number-of-lines TextView. Stolen from Stetic.Editor.Text,
	now also used by Stetic.Editor.Translatable.

	* libstetic/editor/Translatable.cs: base class for translatable
	property editors. Adds an icon indicating whether or not the
	property is marked for translation, with a pop-up menu allowing