@@ -48,6 +48,7 @@ namespace Stetic.Wrapper {
 			}
 			set {
 				GroupManager[Wrapped] = value;
+				EmitNotify ("Group");
 			}
 		}
 	}
